[Mac] DumpRenderTree sets storage directory incorrectly https://bugs.webkit.org/show_bug.cgi?id=139347

Reviewed by Dan Bernstein.

* DumpRenderTree/mac/DumpRenderTree.mm: (setDefaultsToConsistentValuesForTesting):
Don't use user defaults to pass per-instance paths, as user defaults are shared
across all instances.


Canonical link: https://commits.webkit.org/157208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176917 268f45cc-cd09-0410-ab3c-d52691b4dbfc